Add HTML markup for website

--- a/index.html
+++ b/index.html
@@ -6,7 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MockUp Website Design</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <header>
+            <div>
+                <h1>My Website</h1>
+                <p>A responsive website created by me.</p>
+            </div>
+
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Link</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <section>
+                <div>
+                    <h2>Title Heading</h2>
+                    <span>Title description, Dec 7, 2017</span>
+                    <div class="image"></div>
+                    <p>Some text...</p>
+                    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+                    </p>
+                </div>
+
+                <div>
+                    <h2>Title Heading</h2>
+                    <span>Title description, Sep 2, 2017</span>
+                    <div class="image"></div>
+                    <p>Some text...</p>
+                    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+                    </p>
+                </div>
+            </section>
+
+            <aside>
+                <div class="container">
+                    <h2>About Me</h2>
+                    <span>Photo of me:</span>
+                    <div class="image"></div>
+                    <p>Some text about me in culpa qui officia deserunt mollit anim..   </p>
+                </div>
+                <div class="container">
+                    <h2>More Text</h2>
+                    <p>Lorem ipsum dolor sit ame.</p>
+                    <div class="image3"></div>
+                    <div class="image3"></div>
+                    <div class="image3"></div>
+                </div>
+            </aside>
+        </main>
+
+        <footer>
+            <div class="container">
+                <h2>Footer</h2>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
