Modify index.html and edit style.css to style header elements

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header>
-            <div>
+            <div id="header-container">
                 <h1>My Website</h1>
                 <p>A responsive website created by me.</p>
             </div>
