Edit index.html and edit style.css to style navbar element

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#" class="active">Home</a></li>
                     <li><a href="#">Link</a></li>
                     <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
+                    <li><a href="#" class="right">Link</a></li>
                 </ul>
             </nav>
         </header>
