--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             
         </main>
 
-        <footer>
+        <footer id="footer">
             <div class="container">
                 <h2>Footer</h2>
             </div>
